[#1042]support spring cloud 2022.0.x - partial: update components and fix incompatible changes (#1044)